--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-MONGODB_URL = mongodb+srv://nguyenmung:nguyenmung29@nguyenmung.iuxla.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URL = 
 
 ACCESS_TOKEN_SECRET = 3zKZ&/x?SB&M*_h77;v8\uLLb9mkRR2y"#zK==jG&K'a&;"75V
 
